# Real-Time-AAD-on-GPU

./: Black_shole_model.md  Document.md  First_plan.md  README.md  design.md  example_code.md  file tree.md  requirements.txt  see_this.md
CODE/: AADNode.h  AADNumber.h  CMakeLists.txt  debug_aad  debug_aad.cpp  debug_black_scholes.cpp  debug_bs  debug_complex_multiplication  debug_complex_multiplication.cpp  debug_exp_issue  debug_exp_issue.cpp  debug_individual_greeks  debug_individual_greeks.cpp  debug_multiplication  debug_multiplication.cpp  debug_propagation  debug_propagation.cpp  debug_simple  debug_simple_bs.cpp  final_demo  final_realtime_aad_demo.cpp  fixed_bs_final  fixed_bs_final.cpp  isolated_bs_test  isolated_bs_test.cpp  main  main.cpp  minimal_test  minimal_test.cpp  minimal_test_fixed  minimal_working_bs  minimal_working_bs.cpp  realtime_test_fi  realtime_test_final  realtime_test_fixed  realtime_test_greeks_fixed  simple_test  simple_test.cpp  step_by_step_bs  step_by_step_bs.cpp  (+16 more)
CODE/debug_bs.dSYM/Contents/: Info.plist
CODE/debug_bs.dSYM/Contents/Resources/DWARF/: debug_bs
CODE/debug_complex_multiplication.dSYM/Contents/: Info.plist
CODE/debug_complex_multiplication.dSYM/Contents/Resources/DWARF/: debug_complex_multiplication
CODE/debug_exp_issue.dSYM/Contents/: Info.plist
CODE/debug_exp_issue.dSYM/Contents/Resources/DWARF/: debug_exp_issue
CODE/debug_individual_greeks.dSYM/Contents/: Info.plist
CODE/debug_individual_greeks.dSYM/Contents/Resources/DWARF/: debug_individual_greeks
CODE/debug_multiplication.dSYM/Contents/: Info.plist
CODE/debug_multiplication.dSYM/Contents/Resources/DWARF/: debug_multiplication
CODE/debug_propagation.dSYM/Contents/: Info.plist
CODE/debug_propagation.dSYM/Contents/Resources/DWARF/: debug_propagation
CODE/fixed_bs_final.dSYM/Contents/: Info.plist
CODE/fixed_bs_final.dSYM/Contents/Resources/DWARF/: fixed_bs_final
CODE/isolated_bs_test.dSYM/Contents/: Info.plist
CODE/minimal_test.dSYM/Contents/: Info.plist
CODE/minimal_test_fixed.dSYM/Contents/: Info.plist
CODE/minimal_working_bs.dSYM/Contents/: Info.plist
CODE/step_by_step_bs.dSYM/Contents/: Info.plist
CODE/test_bs_fixed.dSYM/Contents/: Info.plist
CODE/test_exact_aad.dSYM/Contents/: Info.plist
CODE/test_full_bs.dSYM/Contents/: Info.plist
CODE/test_greeks_fixed.dSYM/Contents/: Info.plist
CODE/test_norm_cdf_chain.dSYM/Contents/: Info.plist
CODE/test_simple_chain.dSYM/Contents/: Info.plist
CODE/trace_test.dSYM/Contents/: Info.plist
GPU/: AADTypes.h  CMakeLists.txt  CudaMemoryPool.h  CudaStreamManager.h  GPUAADNumber.cpp  GPUAADNumber.h  GPUAADTape.cpp  GPUAADTape.h  README.md  blackscholes_aad_kernels.cu  blackscholes_aad_kernels.h  blackscholes_aad_kernels_fixed.cu  build.sh  build_instructions.md  cuda_kernels.cu  device_functions.cuh  file.tct  gpu.md  main.cpp  numerical_stability.cu  run_tests.sh  test_blackscholes_aad.cpp  test_build.sh  test_final.sh  test_gpu_aad.cpp  test_task2.sh
python/: realtime_data_fetcher.py
(+36 files in other folders)
